deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
      - name: n8n
        image: n8nio/n8n:1.72.1
        ports:
        - containerPort: 5678
        volumeMounts:
        - name: n8n-data
          mountPath: /home/node/.n8n
        securityContext:
          runAsUser: 1000  
          runAsGroup: 1000 
      volumes:
      - name: n8n-data
        persistentVolumeClaim:
          claimName: n8n-pvc
  strategy:
    type: Recreate
